New components for dashboard issues and projects

--- a/app/module/dashboard/dashboard.component.html
+++ b/app/module/dashboard/dashboard.component.html
@@ -1,2 +1,11 @@
 <app-header></app-header>
-<div>This is Dashboard in HTML</div>
+<div class="componentPadding">
+
+    <div class="col-lg-6 col-md-6 col-sm-6">
+        <dashboard-issues></dashboard-issues>
+    </div>
+
+    <div class="col-lg-6 col-md-12 col-sm-12">
+        <dashboard-projects></dashboard-projects>
+    </div>
+</div>
