--- a/app/style/main.css
+++ b/app/style/main.css
@@ -2,3 +2,7 @@ body{
     font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif !important;
     overflow-x: hidden;
 }
+
+.componentPadding {
+    padding: 0px 10px 0px 10px;
+}
