--- a/app/module/appHeader/header.component.html
+++ b/app/module/appHeader/header.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="collapse navbar-collapse" uib-collapse="">
-            <ul class="nav navbar-nav navbar-left">
+            <ul class="nav navbar-nav navbar-left" [hidden]="!loggedIn">
                 <li (click)="navigate('dashboard')" [class.active]="selectedPage === 'dashboard'">
                     <a>Dashboard</a>
                 </li>
@@ -22,12 +22,31 @@
                     <a>Notes</a>
                 </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right ul-padding">
+            <ul class="nav navbar-nav navbar-left" [hidden]="!loggedIn">
+                <li class="searchIndex">
+                    <div class="searchBox">
+                        <input type="text" class="searchInput">
+
+                    </div>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right ul-padding" [hidden]="!loggedIn">
                 <li>
-                    <!--<div>
-                        <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-                    </div>-->
-                    <div class="authButtons">
+                    <div *ngIf="loggedIn">
+                        <div class="dropdown">
+                            <button class="profileBtn" type="button" aria-expanded="true" (click)="toggleMenu()">
+                                Menu
+                            </button>
+                            <ul class="dropdown-menu" *ngIf="menuDisplay">
+                                <li><a href="#">Profile</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Logout</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div *ngIf="!loggedIn" class="authButtons">
                         <button type="button" class="btn btn-default signUpBtn" (click)="navigate('register')">Sign Up</button>
                         <button type="button" class="btn btn-default signInBtn" (click)="navigate('login')">Sign In</button>
                     </div>
