--- a/app/module/dashboard/dashboard.component.html
+++ b/app/module/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="componentPadding">
+<div class="container">
 
     <div class="col-lg-6 col-md-6 col-sm-6">
         <dashboard-issues></dashboard-issues>
