--- a/app/module/login/login.component.html
+++ b/app/module/login/login.component.html
@@ -1,3 +1,4 @@
+<toaster-container></toaster-container>
 <div class="login-wrap">
     <div class="login-html">
         <div class="authDiv">
@@ -6,26 +7,30 @@
         </div>
 
         <div class="login-form">
-            <form name="loginForm">
+            <form name="loginForm" #loginForm="ngForm">
                 <div class="sign-in-htm">
                     <div class="group">
                         <label for="emailAddress" class="label">Username</label>
-                        <input id="emailAddress" name="emailAddress" type="email" class="input">
+                        <input id="emailAddress" name="emailAddress" type="email" class="input" [(ngModel)]="loginFrm.username" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
                     </div>
                     <div class="group">
                         <label for="password" class="label">Password</label>
-                        <input id="password" name="password" type="password" class="input">
+                        <input id="password" name="password" type="password" class="input" [(ngModel)]="loginFrm.password" required>
                     </div>
                     <div class="group">
                         <input id="check" type="checkbox" class="check" checked>
                         <label for="check"><span class="icon"></span>Remember Me</label>
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Sign In">
+                        <input type="button" class="button" value="Sign In" (click)="login(loginFrm)" [disabled]="!loginForm.form.valid">
                     </div>
                     <div class="hr"></div>
                     <div class="foot-lnk">
                         <a [routerLink]="['/forgotPassword']">Forgot Password</a>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="foot-lnk">
+                        Not a Member? &nbsp;<a [routerLink]="['/register']"> Register Here</a>
                     </div>
                 </div>
             </form>
