--- a/app/module/registration/registration.component.css
+++ b/app/module/registration/registration.component.css
@@ -5,7 +5,7 @@ a{color:inherit;text-decoration:none}
 
 .login-wrap{
 	width:100%;
-	margin:auto;
+	margin:100px auto;
 	max-width:525px;
 	min-height:700px;
 	position:relative;
@@ -172,3 +172,32 @@ a{color:inherit;text-decoration:none}
 	margin-left: 40%;
 	margin-bottom: 5%;
 }
+.success {
+	text-align: center;
+}
+
+.success h2 {
+	font-weight: bold;
+	color: #000071;
+}
+.successMsg {
+	margin-bottom: 20px;
+}
+.successMsg h4 {
+	text-align: center;
+    margin: 30px 0px 30px 0px;
+}
+.otpMsg {
+	margin-bottom: 50px;
+}
+.otpLink {
+	text-align: center;
+}
+.otpLink a {
+	cursor: pointer;
+    color: #961616;
+}
+.otpLink a:hover {
+	color: blue;
+}
+
